--- a/.env.development
+++ b/.env.development
@@ -2,8 +2,8 @@
 NODE_ENV=development
 
 # API配置
-VITE_API_BASE_URL=http://localhost:8081/api
-VITE_WS_URL=ws://localhost:8081/ws
+VITE_API_BASE_URL=http://101.200.135.95:8081/api
+VITE_WS_URL=ws://101.200.135.95:8081/ws
 
 # 调试配置
 VITE_DEBUG=true
