--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.0",
-    "element-plus": "^2.4.4",
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.0",
+    "date-fns": "^4.1.0",
     "echarts": "^5.4.3",
-    "vue-echarts": "^6.6.1"
+    "element-plus": "^2.4.4",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.0",
+    "vue-echarts": "^6.6.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "typescript": "^5.2.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.22",
     "unplugin-auto-import": "^0.17.0",
-    "unplugin-vue-components": "^0.25.0"
+    "unplugin-vue-components": "^0.25.0",
+    "vite": "^5.0.0",
+    "vue-tsc": "^1.8.22"
   }
 }
